[gd_scene load_steps=26 format=3 uid="uid://bwfx54ckkdqkm"]

[ext_resource type="Script" uid="uid://jbydpt773v5a" path="res://src/entities/hostile/nav_entity.gd" id="1_6wkix"]
[ext_resource type="Texture2D" uid="uid://05eixr261ttf" path="res://src/entities/shadow.png" id="2_gdk7d"]
[ext_resource type="Texture2D" uid="uid://51l0bvgjidxn" path="res://src/player/madotsuki/display/default/_RESET.png" id="3_a6dv8"]
[ext_resource type="Script" uid="uid://dlvvx5cthl4bp" path="res://src/systems/utils/spritesheet_formatter.gd" id="4_lx1if"]
[ext_resource type="Script" uid="uid://dd0qxrsakskma" path="res://src/entities/component/sb_component_receiver.gd" id="5_t0av6"]
[ext_resource type="Script" uid="uid://dyhtvuyxwohdq" path="res://src/entities/component/sb_sprite_handler.gd" id="6_vv2et"]
[ext_resource type="Script" uid="uid://c3ffcphh8d8gk" path="res://src/entities/hostile/aggression_component.gd" id="7_gdk7d"]
[ext_resource type="Script" uid="uid://sd3feymdmkd6" path="res://src/entities/sentient_fsm.gd" id="7_rq7m6"]
[ext_resource type="Script" uid="uid://4dkyll6fxqod" path="res://src/player/region.gd" id="8_a6dv8"]
[ext_resource type="Script" uid="uid://bhmqr5byqpscr" path="res://src/entities/hostile/stance_states/idle.gd" id="8_bqdwf"]
[ext_resource type="Texture2D" uid="uid://dt3alsci03118" path="res://src/entities/hostile/suspicion_indicator.png" id="8_t0av6"]
[ext_resource type="Script" uid="uid://bk8x1gghf4e05" path="res://src/entities/hostile/stance_states/walk.gd" id="9_6na4e"]
[ext_resource type="Texture2D" uid="uid://w88hxplfwlwt" path="res://src/entities/hostile/suspicion_indicator_fill.png" id="9_vv2et"]
[ext_resource type="Script" uid="uid://qdqcvtymsa3v" path="res://src/entities/sentient_state.gd" id="10_1bo1t"]
[ext_resource type="Texture2D" uid="uid://cyjms4e2pbret" path="res://src/entities/hostile/suspicion_indicator_status.png" id="10_bqdwf"]
[ext_resource type="Script" uid="uid://rbvkxb3m2omw" path="res://src/entities/hostile/behaviour_states/idle.gd" id="11_i4du2"]
[ext_resource type="Script" uid="uid://bj1oqttajdq2m" path="res://src/entities/hostile/behaviour_states/wander.gd" id="12_m1sdc"]
[ext_resource type="Script" uid="uid://clwsghva612ul" path="res://src/entities/hostile/behaviour_states/observe.gd" id="13_g45i6"]
[ext_resource type="Script" uid="uid://dbo5xans8s5ib" path="res://src/entities/hostile/behaviour_states/chase.gd" id="14_oa7jr"]
[ext_resource type="Script" uid="uid://cbg0uhsr4h72h" path="res://src/entities/hostile/behaviour_states/stare_at.gd" id="15_gy8qw"]
[ext_resource type="Script" uid="uid://sahjehrg3n8o" path="res://src/entities/hostile/behaviour_states/follow.gd" id="16_nkab7"]
[ext_resource type="Script" uid="uid://ch7860xvkjcqb" path="res://src/entities/hostile/behaviour_states/taunt.gd" id="18_rq7m6"]
[ext_resource type="Script" uid="uid://b8o626ec7226k" path="res://src/systems/audio/sound_player_2d.gd" id="21_vv2et"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_18lqh"]
blend_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18lqh"]
size = Vector2(13, 4)

[node name="template_hostile" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent", "stance_fsm", "behaviour_fsm")]
script = ExtResource("1_6wkix")
nav_agent = NodePath("nav")
stance_fsm = NodePath("stance_fsm")
behaviour_fsm = NodePath("behaviour_fsm")
initial_speed = 34.3

[node name="on_screen_enabler" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(6, 6)
rect = Rect2(-50, -40, 100, 80)

[node name="shadow_renderer" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_18lqh")
position = Vector2(0, 16)
texture = ExtResource("2_gdk7d")
offset = Vector2(0, -24)

[node name="sprite_renderer" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("3_a6dv8")
script = ExtResource("4_lx1if")
frame_dimensions = Vector2i(20, 26)
metadata/_custom_type_script = "uid://dlvvx5cthl4bp"

[node name="sb_components" type="Node2D" parent="."]
script = ExtResource("5_t0av6")
metadata/_custom_type_script = "uid://dd0qxrsakskma"

[node name="sprite_handler" type="Node" parent="sb_components"]
script = ExtResource("6_vv2et")
metadata/_custom_type_script = "uid://bgisym1hdeqgt"

[node name="aggression_component" type="Node2D" parent="sb_components" node_paths=PackedStringArray("behaviour_fsm", "suspicion_region", "suspicion_indicator", "suspicion_indicator_status", "target_states")]
script = ExtResource("7_gdk7d")
behaviour_fsm = NodePath("../../behaviour_fsm")
suspicion_region = NodePath("suspicion_region")
suspicion_indicator = NodePath("suspicion_indicator")
suspicion_indicator_status = NodePath("suspicion_indicator/_/status")
target_states = [NodePath("../../behaviour_fsm/STARE_AT"), NodePath("../../behaviour_fsm/CHASE"), NodePath("../../behaviour_fsm/FOLLOW"), NodePath("../../behaviour_fsm/OBSERVE")]
emits_chase_sequence = true

[node name="suspicion_indicator" type="Sprite2D" parent="sb_components/aggression_component"]
position = Vector2(0, -23)
texture = ExtResource("8_t0av6")

[node name="_" type="Sprite2D" parent="sb_components/aggression_component/suspicion_indicator"]
clip_children = 1
texture = ExtResource("9_vv2et")

[node name="fill" type="ColorRect" parent="sb_components/aggression_component/suspicion_indicator/_"]
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(0.848582, 0.047714, 0.30767, 1)

[node name="status" type="Sprite2D" parent="sb_components/aggression_component/suspicion_indicator/_"]
texture = ExtResource("10_bqdwf")
hframes = 2
script = ExtResource("4_lx1if")
frame_dimensions = Vector2i(5, 7)
frame_h_count = 2
metadata/_custom_type_script = "uid://dlvvx5cthl4bp"

[node name="suspicion_region" type="Area2D" parent="sb_components/aggression_component"]
script = ExtResource("8_a6dv8")
size = null
metadata/_custom_type_script = "uid://4dkyll6fxqod"

[node name="rect" type="CollisionShape2D" parent="sb_components/aggression_component/suspicion_region"]

[node name="marker" type="Marker2D" parent="sb_components/aggression_component/suspicion_region"]

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_18lqh")

[node name="nav" type="NavigationAgent2D" parent="."]
target_desired_distance = 25.0
navigation_layers = 0
avoidance_enabled = true
radius = 20.0

[node name="stance_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_rq7m6")
initial_state = NodePath("IDLE")
metadata/_custom_type_script = "uid://co5edhtkgx3g8"

[node name="IDLE" type="Node" parent="stance_fsm"]
script = ExtResource("8_bqdwf")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="WALK" type="Node" parent="stance_fsm"]
script = ExtResource("9_6na4e")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="RUN" type="Node" parent="stance_fsm"]
script = ExtResource("10_1bo1t")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="behaviour_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_rq7m6")
initial_state = NodePath("IDLE")
metadata/_custom_type_script = "uid://co5edhtkgx3g8"

[node name="path_update" type="Timer" parent="behaviour_fsm"]

[node name="IDLE" type="Node" parent="behaviour_fsm"]
script = ExtResource("11_i4du2")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="WANDER" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("stance_fsm", "idle_timer")]
script = ExtResource("12_m1sdc")
stance_fsm = NodePath("../../stance_fsm")
idle_timer = NodePath("idle_timer")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="idle_timer" type="Timer" parent="behaviour_fsm/WANDER"]

[node name="OBSERVE" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("stance_fsm", "aggression_component", "hesitance_timer")]
script = ExtResource("13_g45i6")
stance_fsm = NodePath("../../stance_fsm")
aggression_component = NodePath("../../sb_components/aggression_component")
hesitance_timer = NodePath("hesitance_timer")
metadata/_custom_type_script = "uid://sd3feymdmkd6"

[node name="hesitance_timer" type="Timer" parent="behaviour_fsm/OBSERVE"]

[node name="TAUNT" type="Node" parent="behaviour_fsm"]
script = ExtResource("18_rq7m6")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="CHASE" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("stance_fsm", "aggression_component")]
script = ExtResource("14_oa7jr")
stance_fsm = NodePath("../../stance_fsm")
aggression_component = NodePath("../../sb_components/aggression_component")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="STARE_AT" type="Node" parent="behaviour_fsm"]
script = ExtResource("15_gy8qw")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="FOLLOW" type="Node" parent="behaviour_fsm"]
script = ExtResource("16_nkab7")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="sound_player" type="AudioStreamPlayer" parent="."]
script = ExtResource("21_vv2et")
metadata/_custom_type_script = "uid://b8o626ec7226k"
